--- a/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/static/i18n/en.json
+++ b/sipsd-flowable-parent/sipsd-flowable-manager/src/main/resources/static/i18n/en.json
@@ -60,7 +60,9 @@
         "ACTION" : {
             "SEARCH": "SEARCH",
             "CREATE": "Create Process",
-            "IMPORT": "Import Process"
+            "IMPORT": "Import Process",
+            "MULTI-IMPORT": "Import Multi Process",
+            "OUTPUT": "Output Process"
         },
 
         "FILTER" : {
@@ -70,6 +72,8 @@
             "PROCESSES-EMPTY": "There is no process model created yet. You can design process models, user forms and then bundle them up into a process app. The first step is to create a process model:",
             "PROCESSES-BPMN-HINT": "Create a BPMN model using the BPMN Visual Editor.",
             "PROCESSES-BPMN-IMPORT-HINT": "You can also import existing BPMN models.",
+            "PROCESSES-BPMN-MULTI-IMPORT-HINT": "You can also import multi existing BPMN models.",
+            "PROCESSES-BPMN-OUTPUT-HINT": "You can also output existing BPMN models.",
             "FILTER-TEXT": ", matching \"{{filterText}}\"",
             "FILTER-TEXT-EMPTY": "There are no process models matching \"{{filterText}}\"",
             "RECENT": "Recent",
